# dmdf

./: .gitattributes  .gitignore  .travis.yml  AUTHORS  COPYING  ChangeLog  README  README.md  TODO  ThePowerOfFire.txt  ThePowerOfFireEnglish.txt  ThePowerOfFireGerman.txt
archive/: minimap.xcf
archive/TerrainArt/: Terrain.slk  TerrainOld.slk
archive/UI/: CampaignStrings_exp.txt  MiscData.txt  MiscUI.txt  TriggerData.txt  TriggerStrings.txt  WorldEditData.txt  war3skins.txt
archive_de/UI/: CampaignStrings_exp.txt
archive_en/UI/: CampaignStrings_exp.txt
doc/: COOP Campaigns.txt  Custom Map Tutorial.txt  Fehlende Symbole.odt  GUI.txt  Items.txt  Modifying.txt  Releasing.txt  Trigger Data.txt  Warcraft 3 save and cinematic system  manual.tex  presentation.odp  vJass Suggestions.txt
maps/: Arena.w3x  Credits.w3x  Karte 1 - Talras.w3x  Karte 2 - Gardonar.w3x  Karte 2 - Holzbruck.w3x  Karte 2.1 - Gardonars Unterwelt.w3x  Karte 3 - Holzbruck.w3x  Karte 3.1 - Holzbrucks Unterwelt.w3x  Karte 5 - Deranor.w3x  ObjectData.w3o  ObjectDataCampaign.w3o  TestMap.w3x  TheNorth.w3x  Tutorial.w3x  WorldMap.w3x  war3mapMisc.txt  war3mapSkin.txt  war3map_de.wts  war3map_en.wts
maps/Arena/: war3map.j  war3map_de.wts  war3map_en.wts
maps/CampaignObjectData/: war3map.w3u
maps/Credits/: war3map.j  war3map_de.wts  war3map_en.wts
maps/Deranor/: war3map.j  war3map_de.wts  war3map_en.wts
maps/Dornheim/: war3map.j  war3map_en.wts
maps/Gardonar/: war3map.j  war3map_de.wts  war3map_en.wts
maps/GardonarsHell/: war3map.j  war3map_de.wts  war3map_en.wts
maps/Holzbruck/: war3map.j  war3map_de.wts  war3map_en.wts
maps/HolzbrucksUnderworld/: war3map.j  war3map_de.wts  war3map_en.wts
maps/Talras/: war3map.j  war3map_de.wts  war3map_en.wts
maps/TheNorth/: war3map.j  war3map_de.wts  war3map_en.wts
maps/Tutorial/: war3map.j  war3map_de.wts  war3map_en.wts
maps/WorldMap/: war3map.j  war3map_de.wts  war3map_en.wts
maps/english/: war3map.wts
maps/releases/: TPoFCampaign0.6_de.w3n  TPoFCampaign0.6_en.w3n  TPoFCampaign0.7_de.w3n  TPoFCampaign0.7_en.w3n  Talras0.3.w3x  Talras0.3en.w3x
maps/test/: AddItemToSlot.w3m  Animations.w3x  DropPickup.w3m  DropPickup.w3x  ExplicitEvaluate.w3m  ExplicitEvaluate.w3x  FunctionsWhichStopUnits.w3m  FunctionsWhichStopUnits.w3x  HideItemAbility.w3x  InventoryFunctionsWithDeadUnit.w3x  ItemOwner.w3x  Music.w3x  RemoveDrop.w3m  SaveAndLoad.w3x  SaveAndLoadCampaign.w3x  ShopEvent.w3x  Tree Transparency.w3x  TriggerData.w3x  UnitGivesItemToAnotherUnit.w3x  passive transf anim name.w3x
minimap/: minimap.tga  minimapscaled1.tga  minimapscaled1.xcf  war3map.xcf  war3mapMap.blp  war3mapMap.tga  war3mapMapold.blp  war3mapPreview.tga
splash/TPoFSplash/: CMakeLists.txt  client.rc  main.cpp  resource.qrc
src/: Import Dmdf.j  TriggerData.txt
src/Asl/: Blizzard.j  Import Asl.j  Struct Template.j  common.j  vJass Testings.j
src/Deranors Swamp/: Import.j
src/Dornheim/: Import.j
src/Game/: Credits.j  Import.j  Interface Map Data Interface.j  Library Language.j  Struct Buildings.j  Struct Camera Height.j  Struct Character Stats.j  Struct Character.j  Struct Class Selection.j  Struct Classes.j  Struct Commands.j  Struct Dmdf Hash Table.j  Struct Dungeon.j  Struct Fellow.j  Struct Game Cheats.j  Struct Game.j  Struct Grimoire Spell.j  Struct Grimoire.j  Struct History.j  Struct Item Types.j  Struct Map Changer.j  Struct Map Settings.j  Struct Marker.j  (+18 more)
(+942 files in other folders)
